@@ -1,3 +1,4 @@
+2012-01-17  0.5-4  included NAMESPACE, update of the documentation
 2009-08-16  0.5-3  extended DESCRIPTION file
                    corrected ?set.vector.seed
                    code cleaning
